objects/DandB__c.object
<CustomObject>
    <fields>
        <fullName>Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application</label>
        <referenceTo>genesis__Applications__c</referenceTo>
        <relationshipLabel>DandB</relationshipLabel>
        <relationshipName>DandB</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>birthDay__c</fullName>
        <label>birthDay</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>birthMonth__c</fullName>
        <label>birthMonth</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>birthYear__c</fullName>
        <label>birthYear</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>consumerId__c</fullName>
        <label>consumerId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>country__c</fullName>
        <label>country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>disclosure__c</fullName>
        <label>disclosure</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>driversLicenceNumber__c</fullName>
        <label>driversLicenceNumber</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>employer__c</fullName>
        <label>employer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>enquiryDay__c</fullName>
        <label>enquiryDay</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>enquiryMonth__c</fullName>
        <label>enquiryMonth</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>enquiryType__c</fullName>
        <label>enquiryType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>enquiryYear__c</fullName>
        <label>enquiryYear</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>environment__c</fullName>
        <label>environment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>firstName__c</fullName>
        <label>firstName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>firstRecordedDay__c</fullName>
        <label>firstRecordedDay</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>firstRecordedMonth__c</fullName>
        <label>firstRecordedMonth</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>firstRecordedYear__c</fullName>
        <label>firstRecordedYear</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hasBankruptcy__c</fullName>
        <label>hasBankruptcy</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hasDefault__c</fullName>
        <label>hasDefault</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hasDirector__c</fullName>
        <label>hasDirector</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hasEnquiry__c</fullName>
        <label>hasEnquiry</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hasError__c</fullName>
        <label>hasError</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hasFileNote__c</fullName>
        <label>hasFileNote</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hasJudgment__c</fullName>
        <label>hasJudgment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hasOtherPublicRecord__c</fullName>
        <label>hasOtherPublicRecord</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hasSummary__c</fullName>
        <label>hasSummary</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hasSummons__c</fullName>
        <label>hasSummons</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hasWarning__c</fullName>
        <label>hasWarning</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>indSegId__c</fullName>
        <label>indSegId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>integrationErrorStatusCode__c</fullName>
        <label>integrationErrorStatusCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>integrationErrorStatus__c</fullName>
        <label>integrationErrorStatus</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>internalReference__c</fullName>
        <label>internalReference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isMinor__c</fullName>
        <label>isMinor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>newFileCreated__c</fullName>
        <label>newFileCreated</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>otherName__c</fullName>
        <label>otherName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>personFirstName__c</fullName>
        <label>personFirstName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>personOtherName__c</fullName>
        <label>personOtherName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>personSurname__c</fullName>
        <label>personSurname</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>possibleMchDobDay__c</fullName>
        <label>possibleMchDobDay</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>possibleMchDobMonth__c</fullName>
        <label>possibleMchDobMonth</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>possibleMchDobYear__c</fullName>
        <label>possibleMchDobYear</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>possibleMchFirstName__c</fullName>
        <label>possibleMchFirstName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>possibleMchFirstRecordedDay__c</fullName>
        <label>possibleMchFirstRecordedDay</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>possibleMchFirstRecordedMonth__c</fullName>
        <label>possibleMchFirstRecordedMonth</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>possibleMchFirstRecordedYear__c</fullName>
        <label>possibleMchFirstRecordedYear</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>possibleMchIndConsumerId__c</fullName>
        <label>possibleMchIndConsumerId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>possibleMchIndSegId__c</fullName>
        <label>possibleMchIndSegId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>possibleMchOtherName__c</fullName>
        <label>possibleMchOtherName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>possibleMchSegId__c</fullName>
        <label>possibleMchSegId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>possibleMchSequence__c</fullName>
        <label>possibleMchSequence</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>possibleMchSex__c</fullName>
        <label>possibleMchSex</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>possibleMchSurname__c</fullName>
        <label>possibleMchSurname</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>productCode__c</fullName>
        <label>productCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rawRequest__c</fullName>
        <label>rawRequest</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>rawResponse__c</fullName>
        <label>rawResponse</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>scoreBand__c</fullName>
        <label>scoreBand</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>scoreDay__c</fullName>
        <label>scoreDay</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>scoreMonth__c</fullName>
        <label>scoreMonth</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>scoreName__c</fullName>
        <label>scoreName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>scoreYear__c</fullName>
        <label>scoreYear</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>score__c</fullName>
        <label>score</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>scorecardIndicator__c</fullName>
        <label>scorecardIndicator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>segId__c</fullName>
        <label>segId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sex__c</fullName>
        <label>sex</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>showDetails__c</fullName>
        <defaultValue>false</defaultValue>
        <label>showDetails</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>summarySegId__c</fullName>
        <label>summarySegId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>summarySequence__c</fullName>
        <label>summarySequence</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>surname__c</fullName>
        <label>surname</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>trailerSegId__c</fullName>
        <label>trailerSegId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>uniqueCustomerReference__c</fullName>
        <label>uniqueCustomerReference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>version__c</fullName>
        <label>version</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>DandB</label>
    <nameField>
        <displayFormat>DnB-{0000000000}</displayFormat>
        <label>DanB Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DandB</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>